fix: constrain images to viewport width on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -63,6 +63,11 @@ p {
   margin-bottom: 1rem;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
